tests/paczka1/small_fuzzy/72636044.err
Error in line 1: TAnDztr A937 3,8
Error in line 7: TAnDztr A898 25,6
